--- a/index.html
+++ b/index.html
@@ -25,9 +25,10 @@
       <!-- header end -->
       <!-- main start -->
       <main>
+        <!-- mainContainer start -->
         <div class="maincontainer">
           <div class="group1">
-            <img src="./img/Group 1.png" alt="" />
+            <img src="./img/Group 1.png" alt="group 1.png" />
           </div>
           <div class="mainContainer">
             <div class="mainHeader">
@@ -43,6 +44,8 @@
             <button class="downloadd"><p>Download Resume</p></button>
           </div>
         </div>
+        <!-- mainContainer end -->
+
         <!-- mainContainer2 start -->
         <div class="mainContainer2">
           <div class="main2Header">
@@ -55,7 +58,7 @@
               <div class="text1p1-Vector-p2">
                 <p>12 Feb 2020</p>
                 <div class="vector">
-                  <img src="./img/Vector 1.png" alt="" />
+                  <img src="./img/Vector 1.png" alt="vector 1.png" />
                 </div>
                 <p>Design, Pattern</p>
               </div>
@@ -70,7 +73,7 @@
               <div class="text1p1-Vector-p2">
                 <p>12 Feb 2020</p>
                 <div class="vector">
-                  <img src="./img/Vector 1.png" alt="" />
+                  <img src="./img/Vector 1.png" alt="vector 1.png" />
                 </div>
                 <p>Design, Pattern</p>
               </div>
@@ -80,11 +83,99 @@
                 Exercitation veniam consequat sunt nostrud amet.
               </p>
             </div>
-           
+          </div>
         </div>
         <!-- mainContainer2 end -->
+
+        <!-- mainContainer3 start -->
+        <div class="featured">
+          <p>Featured works</p>
+        </div>
+        <!-- work-list-mobile start -->
+        <div class="work-list-mobile">
+          <img src="./img/work-list-mobile.png" alt="work-list-mobile" />
+        </div>
+        <!--work-list mobile end  -->
+        <div class="mainContainer3">
+          <div class="rectangles">
+            <img src="./img/Rectangle 30.png" alt="rectangle 30.png" />
+            <div class="h1-buttonp">
+              <h1>Designing Dashboards</h1>
+              <div class="button-P">
+                <button>2020</button>
+                <p>Dashboard</p>
+              </div>
+              <p class="amet">
+                Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+                amet sint. Velit officia consequat duis enim velit mollit.
+                Exercitation veniam consequat sunt nostrud amet.
+              </p>
+            </div>
+          </div>
+          <div class="vector8png">
+            <img src="./img/Vector 8.png" alt="vector 8.png" />
+          </div>
+          <!-- rectangles2 start -->
+          <div class="rectangles">
+            <img src="./img/Rectangle 32.png" alt="rectangle 32.png" />
+            <div class="h1-buttonp">
+              <h1>Vibrant Portraits of 2020</h1>
+              <div class="button-P">
+                <button>2018</button>
+                <p>Illustration</p>
+              </div>
+              <p class="amet">
+                Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+                amet sint. Velit officia consequat duis enim velit mollit.
+                Exercitation veniam consequat sunt nostrud amet.
+              </p>
+            </div>
+          </div>
+          <div class="vector8png">
+            <img src="./img/Vector 8.png" alt="vector 8.png" />
+          </div>
+          <!-- rectangles2 end -->
+
+          <!-- rectangles3 start -->
+          <div class="rectangles">
+            <img src="./img/Rectangle 34.png" alt="rectangle 34.png" />
+            <div class="h1-buttonp">
+              <h1>36 Days of Malayalam type</h1>
+              <div class="button-P">
+                <button>2018</button>
+                <p>Typography</p>
+              </div>
+              <p class="amet">
+                Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+                amet sint. Velit officia consequat duis enim velit mollit.
+                Exercitation veniam consequat sunt nostrud amet.
+              </p>
+            </div>
+          </div>
+          <div class="vector8png">
+            <img src="./img/Vector 8.png" alt="vector 8.png" />
+          </div>
+          <!-- rectangles3 end -->
+        </div>
+        <!-- mainContainer3 end -->
       </main>
       <!-- main end -->
+
+      <!-- footer start -->
+      <footer>
+        <div class="icons-end">
+        <div class="icons">
+       <img class="icon-img" src="./img/fb.png" alt="">
+       <img class="icon-img" src="./img/insta.png" alt="">
+       <img class="icon-img" src="./img/Group.png" alt="">
+       <img class="icon-img" src="./img/Linkedin.png" alt="">
+        </div>
+        <div class="end">
+          <p>Copyright ©2020 All rights reserved </p>
+        </div>
+      </div>
+      </footer>
+      <!-- footer end -->
     </div>
   </body>
 </html>
